--- a/index.html
+++ b/index.html
@@ -11,23 +11,26 @@
 <body>
   <div class="parent">
     <div class="box1">
-      <h2 class="mainheading">Get <b style="color:hsl(277,64%,61%) ;">insights</b> that help<br> your business grow.</h2>
+      <h2 class="mainheading">Get <b style="color:hsl(277,64%,61%) ;">insights</b> that help your business grow.</h2>
     <p class="mainparagraph">
-        Discover the benefits of data analytics and make<br>better decisions regarding revenue, customer <br> experience and 
+        Discover the benefits of data analytics and make better decisions regarding revenue, customer experience and 
         overall efficiency.
     </p>
-    <table>
-        <tr>
-            <th>10k&#43;</th>
-            <th>314</th>
-            <th>12M&#43;</th>
-        </tr>
-        <tr>
-        <td>COMPANIES</td>
-        <td>TEMPLATES</td>
-        <td>QUERIES</td>
-    </tr>
-    </table>
+ 
+    <div class="grid">
+      <div class="item1">
+        <h3>10k&#43;</h3>
+        <p class="para">COMPANIES</p>
+      </div>
+      <div class="item2">
+        <h3>314</h3>
+        <p class="para">TEMPLATES</p>
+      </div>
+      <div class="item3">
+        <h3>12M&#43;</h3>
+        <p class="para">QUERIES</p>
+      </div>
+    </div>
     </div>
     <div class="box2" >
      
